tests/outref/TCEF03_type_mismatch.ref

-- TCEF03 : OCTO553 : type coercions should be consistent
-- type mismatches are errors
SELECT GREATEST(1, '2');
SELECT GREATEST(10, '2');
SELECT GREATEST('10', 2);
SELECT GREATEST(1, NULL, '2');
SELECT GREATEST(1, NULL, '2', 2.4);

SELECT LEAST(1, '2');
SELECT LEAST(10, '2');
SELECT LEAST('10', 2);
SELECT LEAST(1, NULL, '2');
SELECT LEAST(1, NULL, '2', 2.4);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 17):

SELECT GREATEST(1, '2');
                ^
Error with syntax near (line 1, column 22):

SELECT GREATEST(1, '2');
                     ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT GREATEST(1, '2');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 17):

SELECT GREATEST(10, '2');
                ^^
Error with syntax near (line 1, column 23):

SELECT GREATEST(10, '2');
                      ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT GREATEST(10, '2');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left VARCHAR, right INTEGER
Error with syntax near (line 1, column 20):

SELECT GREATEST('10', 2);
                   ^
Error with syntax near (line 1, column 23):

SELECT GREATEST('10', 2);
                      ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT GREATEST('10', 2);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 17):

SELECT GREATEST(1, NULL, '2');
                ^
Error with syntax near (line 1, column 28):

SELECT GREATEST(1, NULL, '2');
                           ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT GREATEST(1, NULL, '2');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 17):

SELECT GREATEST(1, NULL, '2', 2.4);
                ^
Error with syntax near (line 1, column 28):

SELECT GREATEST(1, NULL, '2', 2.4);
                           ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT GREATEST(1, NULL, '2', 2.4);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 14):

SELECT LEAST(1, '2');
             ^
Error with syntax near (line 1, column 19):

SELECT LEAST(1, '2');
                  ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LEAST(1, '2');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 14):

SELECT LEAST(10, '2');
             ^^
Error with syntax near (line 1, column 20):

SELECT LEAST(10, '2');
                   ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LEAST(10, '2');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left VARCHAR, right INTEGER
Error with syntax near (line 1, column 17):

SELECT LEAST('10', 2);
                ^
Error with syntax near (line 1, column 20):

SELECT LEAST('10', 2);
                   ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LEAST('10', 2);
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 14):

SELECT LEAST(1, NULL, '2');
             ^
Error with syntax near (line 1, column 25):

SELECT LEAST(1, NULL, '2');
                        ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LEAST(1, NULL, '2');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 14):

SELECT LEAST(1, NULL, '2', 2.4);
             ^
Error with syntax near (line 1, column 25):

SELECT LEAST(1, NULL, '2', 2.4);
                        ^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LEAST(1, NULL, '2', 2.4);

